--- a/social_service/src/main/resources/application.properties
+++ b/social_service/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server.port=8085
-spring.application.name=USER-SERVICE
+server.port=8081
+spring.application.name=SOCIAL_SERVICE
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service_v3   
+spring.datasource.url=jdbc:mysql://localhost:3306/social_service_v3   
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
